--- a/index.html
+++ b/index.html
@@ -3,12 +3,30 @@
 
 <head>
     <meta charset="utf-8">
-    <!-- <script src="./d3.min.js"></script> -->
+
+    <script src="https://d3js.org/d3.v4.js"></script>
+    <script src="http://d3js.org/topojson.v1.min.js"></script>
+    <script src="http://d3js.org/queue.v1.min.js"></script>
 
     <style>
-        body {
-            background: #000;
-            /* color: #fff; */
+        #countryTooltip {
+            position: absolute;
+            height: auto;
+            padding: 10px;
+            background-color: white;
+            pointer-events: none;
+            border: solid #ccc 1px;
+            color: #666;
+            font-size: 14px;
+            font-family: sans-serif;
+        }
+
+        #countryTooltip.hidden {
+            display: none;
+        }
+
+        .selected {
+            fill: red !important;
         }
     </style>
 
@@ -17,13 +35,167 @@
 
 <body>
 
-    <svg width="1200" height="1000" font-family="sans-serif" font-size="10"></svg>
+    <!-- <script src="d3-scale-radial.js"></script>
+    <script src="./visualisation.js"></script> -->
 
-    <script src="https://d3js.org/d3.v4.js"></script>
-    <script src="d3-scale-radial.js"></script>
-    <script src="./visualisation.js"></script>
+    <script>
+        var width = 400,
+            height = 400,
+            dragSensitivity = 0.30; // Amount globe moves on drag
+
+
+        var svg = d3.select("body").append("svg")
+            .attr("width", width)
+            .attr("height", height)
+
+        var countryTooltip = d3.select("body").append("div")
+            .attr("id", "countryTooltip")
+            .attr("class", "hidden");
+
+        var color = d3.scaleQuantize()
+            .range(["rgb(237,248,233)", "rgb(186,228,179)",
+                "rgb(116,196,118)", "rgb(49,163,84)", "rgb(0,109,44)"]);
+
+        var projection = d3.geoOrthographic()
+            .scale(200)
+            .rotate([0, 0])
+            .translate([width / 2, height / 2])
+            .clipAngle(90);
+
+        var path = d3.geoPath().projection(projection);
+
+        var dragging = function (d) {
+            var rotate = projection.rotate();
+            projection.rotate([d3.event.x * dragSensitivity, -d3.event.y * dragSensitivity, rotate[2]]);
+            svg.selectAll("path").attr("d", path);
+        }
+
+        var subject = function (d) {
+            var rotate = projection.rotate();
+            return { x: rotate[0] / dragSensitivity, y: -rotate[1] / dragSensitivity };
+        }
+
+        var drag = d3.drag()
+            .subject(subject)
+            .on("start", function () {
+                d3.event.sourceEvent.stopPropagation(); // silence other listeners
+                if (d3.event.sourceEvent.which == 1)
+                    dragInitiated = true;
+            })
+            .on("drag", dragging);
+
+        //Create a container in which all pan-able elements will live
+        var map = svg.append("g")
+            .attr("id", "map")
+            .call(drag);  //Bind the dragging behavior
+
+        //Create a new, invisible background rect to catch drag events
+        map.append("rect")
+            .attr("x", 0)
+            .attr("y", 0)
+            .attr("width", width)
+            .attr("height", height)
+            .attr("opacity", 0);
+
+        queue()
+            .defer(d3.json, "./data/world-110m.json")
+            .defer(d3.tsv, "./data/world-110m-country-names.tsv")
+            .defer(d3.csv, "./data/whr-data.csv")
+            .await(ready);
+
+        function ready(error, worldTopologyData, countryNamesData, worldHappinessData) {
+
+            if (error) throw error;
+
+            var dataset = topojson.feature(worldTopologyData, worldTopologyData.objects.countries).features;
+
+            // Amalgamate all the data into one dataset
+            countryNamesByID = {}
+            countryNamesData.forEach(function (d) {
+                countryNamesByID[d.id] = d.name;
+            });
+            worldHappinessByName = {}
+            worldHappinessData.forEach(function (d) {
+                worldHappinessByName[d['Country']] = d
+            });
+
+            var countryName;
+            dataset.forEach(function (d, i) {
+                countryName = countryNamesByID[d.id];
+                dataset[i]['properties']['name'] = countryName;
+                dataset[i]['properties']['happiness'] = worldHappinessByName[countryName];
+            });
+
+            color.domain([
+                d3.min(dataset, function (d) {
+                    if (typeof (d.properties.happiness) != 'undefined') {
+                        return d.properties.happiness['Happiness score'];
+                    }
+
+                }),
+                d3.max(dataset, function (d) {
+                    if (typeof (d.properties.happiness) != 'undefined') {
+                        return d.properties.happiness['Happiness score'];
+                    }
+                })
+            ]);
+
+            var world = map.selectAll("path")
+                .data(dataset)
+                .enter()
+                // .filter(function (d) {
+                //     return
+                // })
+                .append("path")
+                .attr("d", path)
+                // Choropleth
+                .style("fill", function (d) {
+                    if (typeof (d.properties.happiness) == 'undefined') {
+                        console.log(d.properties.name);
+                        return 'grey'
+                    }
+                    var value = d.properties.happiness['Happiness score'];
+                    return color(value);
+                })
+                // Event handlers
+                .on("mouseover", function (d) {
+                    if (d.properties.name) {
+                        //Get this bar's x/y values, then augment for the tooltip
+                        updateCountryTooltipPosition()
+                        //Update the tooltip text and value
+                        countryTooltip.text(d.properties.name).classed("hidden", false);
+                    }
+
+                })
+                .on("mouseout", function (d) {
+                    countryTooltip.classed("hidden", true);
+                })
+                .on("mousemove", function (d) {
+                    updateCountryTooltipPosition();
+                })
+                .on("click", function (d) {
+                    d3.selectAll('path.selected').classed("selected", false);
+                    d3.select(this).classed("selected", true);
+                });
+        }
+
+        var updateCountryTooltipPosition = function () {
+            var xPosition = d3.event.pageX + 7;
+            var yPosition = d3.event.pageY - 15;
+            countryTooltip.style("left", xPosition + "px")
+                .style("top", yPosition + "px")
+        }
+
+
+
+
+    </script>
+
 
 
 </body>
+
+
+
 
 </html>
